tests/baselines/reference/genericPrototypeProperty3.errors.txt
tests/cases/compiler/genericPrototypeProperty3.ts(6,5): error TS2610: Property 'target' will overwrite the base property in 'BaseEvent'. Add a 'declare' modifier or an initializer to avoid this.
tests/cases/compiler/genericPrototypeProperty3.ts(13,5): error TS2610: Property 't' will overwrite the base property in 'BaseEventWrapper'. Add a 'declare' modifier or an initializer to avoid this.


==== tests/cases/compiler/genericPrototypeProperty3.ts (2 errors) ====
    class BaseEvent {
        target: {};
    }
    
    class MyEvent<T> extends BaseEvent { // T is instantiated to any in the prototype, which is assignable to {}
        target: T;
        ~~~~~~
!!! error TS2610: Property 'target' will overwrite the base property in 'BaseEvent'. Add a 'declare' modifier or an initializer to avoid this.
    }
    class BaseEventWrapper {
        t: BaseEvent;
    }
    
    class MyEventWrapper extends BaseEventWrapper {
        t: MyEvent<any>;
        ~
!!! error TS2610: Property 't' will overwrite the base property in 'BaseEventWrapper'. Add a 'declare' modifier or an initializer to avoid this.
    }